Improve Memory advisor checks and add native/GC/finalizer rules
Audit and harden the JVM Memory advisor ruleset. Tighten or rescope the
existing rules to cut false positives, fix two data-collection bugs, and
add seven new consensus checks.

Existing rules:
- MEM-HEAP-001: raise the critical threshold to 95% and note the
  single-snapshot caveat.
- MEM-HEAP-003: downgrade to LOW and require real heap pressure plus a
  much larger container limit before flagging an undersized max heap.
- MEM-POOL-002: evaluate each JIT code-cache segment individually
  instead of merging them.
- MEM-POOL-003: compare direct-buffer capacity (not used) to the cap and
  drop the absolute 256 MiB trigger.
- MEM-GC-001: removed (collector-vs-heap-size heuristic was unreliable).
- MEM-GC-002: downgrade to INFO and drop the InitialRAMPercentage clause.
- MEM-THREAD-002 / MEM-THREAD-004: require a minimum absolute count and
  normalize thread CPU time by JVM uptime.
- MEM-CONTENT-001/002/003: clarify these are shallow-size histogram
  findings and exclude primitive arrays from the dominant-class check.
- MEM-CLASS-001: only flag a high loaded-class count when unloading is
  near zero.

Collector fixes:
- Compute histogram totals over every row, keeping the top-N only for
  display, so percentage-of-heap rules are no longer skewed.
- Collect process-level runtime data (uptime, cumulative GC time/count,
  pending finalizers, parsed -Xms/-Xss) for the new rules.

New rules: MEM-FOOTPRINT-001 (committed native footprint vs container
limit), MEM-GC-003 (lifetime GC overhead), MEM-HEAP-004 (compressed-oops
cliff), MEM-HEAP-005 (unequal -Xms/-Xmx for low-latency collectors),
MEM-HEAP-006 (finalizer backlog), MEM-POOL-004 (unbounded Metaspace in a
container), MEM-CLASS-002 (class-loading churn).

Adds docs/MEMORY-CHECKS.md cataloguing all 22 checks, wires it into the
docs sidebar and FEATURES.md, and extends MemoryScannerTests.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>